--- a/index.html
+++ b/index.html
@@ -17,20 +17,25 @@
     </header>
     <main>
         <form action="#">
-            <textarea class="entrada" placeholder="Ingrese el texto aqui" name="" id="" cols="30" rows="8"></textarea>
+            <textarea class="entrada" placeholder="Ingrese el texto aqui" name="" id="entrada" cols="30" rows="8"></textarea>
             <p><img src="img/signal.svg" alt="Signo de información"> Solo letras minusculas y sin acentos</p>
 
             <div class="botones">
-                <input class="boton" type="submit" value="Encriptar">
-                <input class="boton" type="submit" value="Desencriptar">
+                <input class="boton" type="submit" value="Encriptar" id="btn_encriptar">
+                <input class="boton" type="submit" value="Desencriptar" id="btn_desencriptar">
 
             </div>
         </form>
-        <div class="mensaje">
-            <img src="img/persona.svg" alt="Persona con una lupa" class="persona">
-            <h2>Ningún mensaje fue encontrado</h2>
-            <p>Ingresa el texto que desees encriptar o desencriptar.</p>
+        <div class="mensaje" id="div_mensaje">
+            <div class="vacio" id="vacio">
+                <img src="img/persona.svg" alt="Persona con una lupa" class="persona">
+                <h2>Ningún mensaje fue encontrado</h2>
+                <p>Ingresa el texto que desees encriptar o desencriptar.</p>
+            </div>
+            <p id="mensaje" class="salida"></p>
+            <input type="submit" class="boton" value="Copiar" id="btn_copiar">
         </div>
     </main>
+<script src="js/funcionalidad.js"></script>
 </body>
 </html>
